--- a/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
+++ b/Wray_Tracker/Views/Projects/ManageProjectAssignments.cshtml
@@ -64,13 +64,13 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayName("Full Name")
+                    @Html.DisplayName("Name")
                 </th>
                 <th>
                     @Html.DisplayName("Email")
                 </th>
                 <th>
-                    @Html.DisplayName("Role Name")
+                    @Html.DisplayName("Role")
                 </th>
                 <th>
                     @Html.DisplayName("Projects")
@@ -100,7 +100,5 @@
                 </tr>
             }
         </tbody>
-
-
     </table>
 </div>
